set proper title in ios phone for cropping issue of text display

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,16 +13,17 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-/*
+
 .toolbar-ios {
-  min-height: 75px !important;
+  // min-height: 75px !important;
 
   .title-ios {
-    height: 75px !important;
-    min-height: 75px !important;
+    // height: 75px !important;
+    // min-height: 75px !important;
+    padding: 20px 0px 0px 0px;
   }
 }
-*/
+
 
 ion-app.ios,
 ion-app.md,
